--- a/requirements.txt
+++ b/requirements.txt
@@ -29,8 +29,10 @@ jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==2.4
 langchain==0.1.11
+langchain-anthropic==0.1.11
 langchain-community==0.0.27
 langchain-core==0.1.30
+langchain-google-genai==1.0.3
 langchain-openai==0.0.8
 langchain-text-splitters==0.0.1
 langdetect==1.0.9
